# alexos-chainbot

./: CHAINBOT_CURSOR_DEV_COMPLETE_REPORT.md  CHAINBOT_GUI_PHASE1_IMPLEMENTATION_REPORT.md  CHAINBOT_GUI_PHASE2_IMPLEMENTATION_REPORT.md  CHAINBOT_GUI_PHASE3_IMPLEMENTATION_REPORT.md  chainbot_gui_nginx.conf  deploy_backend_update.sh  deploy_chainbot.sh  deploy_chainbot_api_fix.sh  deploy_chainbot_remote.sh  deploy_chainbot_simple.sh  deploy_gui_to_pi.sh  deploy_llmbackend.sh  diagnose_integration.sh  llmbackend.service  requirements.txt  resolve_conflicts.sh
chainbot/: .gitignore  .gitkeep  ALEX_OS_IMPLEMENTATION_SUMMARY.md  ALEX_OS_INTEGRATION_GUIDE.md  DEVELOPMENT_STATUS.md  Dockerfile  GPT_INTEGRATION_GUIDE.md  Makefile  PHASE_3_IMPLEMENTATION_SUMMARY.md  PORT_CONFIGURATION.md  PROJECT_SUMMARY.md  README.md  api_routes.py  chainbot-backend.service  chainbot_module.py  deploy_alex_os.sh  dev.sh  docker-compose.yml  guts_backend.py  llmbackend.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
chainbot/.github/workflows/: ci.yml
chainbot/backend/: README.md  alembic.ini  docker-compose.yml  nohup.out  setup_gpt_env.sh
chainbot/backend/alembic/: env.py
chainbot/backend/alembic/versions/: e14745569c8d_initial_schema.py
chainbot/backend/app/: config.py  db.py  main.py
chainbot/backend/app/api/: agents.py  audit_logs.py  auth.py  chatgpt_import.py  entanglements.py  gpt_integration.py  sessions.py  users.py  webhooks.py  websockets.py  workflows.py
chainbot/backend/app/models/: agent.py  audit_log.py  base.py  entanglement.py  session.py  user.py  workflow.py
chainbot/backend/app/schemas/: agent.py  audit_log.py  entanglement.py  session.py  user.py  workflow.py
chainbot/backend/app/services/: __init__.py  agent_brain.py  agent_spawner.py  ai_agent_manager.py  alex_os_integration.py  alex_os_registration.py  audit.py  auth.py  auth_dependencies.py  chatgpt_data_importer.py  entanglement.py  local_llm_manager.py  maclink_client.py  openai_client.py  sample_data.py  websocket_manager.py  workflow_engine.py  workflow_orchestrator.py
chainbot/chainbot/cli/: __init__.py  main.py
chainbot/chainbot/config/: __init__.py  config.py
chainbot/chainbot/gui/: vite.config.ts
chainbot/chainbot/gui/src/: App.css  App.tsx  AuthContext.tsx  CenterPaneChat.tsx  LeftPaneSessions.tsx  RegisterForm.tsx  RightPaneLogs.tsx
chainbot/config/: default.yaml  schema.json
chainbot/electron/: README.md  SETUP.md  build.sh  dev.sh  entitlements.mac.plist  main.js  package-lock.json  package.json  preload.js
chainbot/gui/: BACKEND_API_CONTRACT.md  ChainBotGUI-0.0.0.dmg  DEMO_AI_FEATURES.md  KEYBOARD_SHORTCUTS_AND_PREFERENCES.md  PHASE_2_STATUS.md  PHASE_5_6_COMPLETE_MILESTONE.md  PHASE_7_COMPLETE_MILESTONE.md  PHASE_8_KEYBOARD_SHORTCUTS_AND_PREFERENCES.md  PLUGIN_ECOSYSTEM_ENHANCEMENT.md  PLUGIN_ECOSYSTEM_MILESTONE.md  QUICK_START.md  README.md  README_PLUGIN_DEV.md  SELF_BUILD_MILESTONE_ACHIEVED.md  V1_FUNCTIONAL_PROTOTYPE_REPORT.md  V1_USER_GUIDE.md  build-macos-dmg.sh  eslint.config.js  index.html  openapi.yaml  package-lock.json  package.json  vite.config.ts
chainbot/gui/.github/workflows/: ci-cd.yml
chainbot/gui/electron/: macos-distribution.js
chainbot/gui/scripts/: build-macos-dmg.sh  create-plugin.js
chainbot/gui/src/: AgentManager.tsx  AgentMap.tsx  AgentMap.tsx.disabled  App.css  App.tsx  AuthContext.tsx  AutoSave.tsx  CenterPaneChat.css  CenterPaneChat.tsx  ChatGPTDataImporter.css  ChatGPTDataImporter.tsx  CodeEditor.tsx  EnhancedChat.tsx  LoginForm.tsx  UpdateManager.tsx  WatchtowerManager.tsx  WorkflowBuilder.css  WorkflowBuilder.tsx  WorkflowExecutionDashboard.tsx  index.css  main.tsx
chainbot/gui/src/components/: AgentControlPanel.tsx  AgentDetails.tsx  AgentNode.tsx  AgentToolbar.tsx  AnalyticsDashboard.tsx  ChatGPTStyleChat.css  ChatGPTStyleChat.tsx  ChatInterface.tsx  ChatSettings.tsx  CodeEditor.tsx  ConnectionLine.tsx  EnhancedChat.tsx  MemoryDashboard.tsx  MultiPaneLayout.tsx  PersistentChat.tsx  PluginManager.tsx  SelfBuildDashboard.tsx  SessionHandoff.tsx  StatusLegend.tsx  (+2 more)
chainbot/modules/chainbot/: README.md  __init__.py  api_routes.py  chainbot_module.py
chainbot/monitoring/: alerts.yml  prometheus.yml
chainbot/scripts/: setup_dev.sh
(+65 files in other folders)
